--- a/simulador_compra/index.html
+++ b/simulador_compra/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Conta Bancaria</title>
+    <title>Simulador Compras</title>
 </head>
 <body>
-    <script src="/conta_bancaria/script.js"></script>
+    <script src="/simulador_compra/script.js"></script>
 </body>
 </html>
